<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- API related strings-->
    <string name="facebook_app_id"> 695528923924729 </string>

    <string name="app_name">Handshake</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>


    <string name="connect_accounts"> Connect Accounts</string>
    <string name="Profiles">Profiles</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Supported Social Media-->
    <string name="platform.name.facebook">FaceBook</string>
    <string name="platform.name.twitter">Twitter</string>
    <string name="platform.name.linkedIn">LinkedIn</string>
    <string name="platform.name.instagram">Instagram</string>
    <string name="platform.name.google_plus">Google Plus</string>
    <string name="platform.name.pinterest">Pinterest</string>

    <!-- Navigation Drawer -->
    <string name="drawer.title.connected_accounts">Connected Accounts</string>
    <string name="drawer.title.settings">Settings</string>
    <string name="drawer.title.logout">Logout</string>
    <string name="drawer.title.help_feedback">Help and Feedback</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer.title.profiles">NFC Profiles</string>
    <string name="drawer.title.pending_connections">Pending Connections</string>
    <string name="drawer.title.maps">Maps</string>
    <string name="drawer.title.home">Home</string>

    <string name="title_activity_maps">Map</string>

    <!-- Profiles Page -->
    <string-array name="profiles_array">
        <item> Social </item>
        <item> Business </item>
        <item> Custom </item>
    </string-array>

    <string name="bump.nfc.enabled">NFC is enabled. Bump phones to initiate transfer</string>
    <string name="bump.nfc.disabled">NFC is disabled. Turn on NFC to enable bumping</string>

    <string name="personalInformation">Manage Personal Information</string>
    <string name="pref_edit_name">Name</string>
    <string name="pref_edit_contact_number">Contact Number</string>
    <string name="pref_edit_email">Email Address</string>
    <string name="pref_edit_address">Residential Address</string>
    <string name="pref_chk_shareLocation">Share Location</string>
    <string name="pref_chk_updateLocation">Update Location</string>
    <string name="pref_chk_setTimer">Set Timer</string>
    <string name="login_title">Handshake</string>

</resources>
